--- a/chrome/manifest.json
+++ b/chrome/manifest.json
@@ -1,9 +1,9 @@
 {
     "manifest_version": 2,
-    "name": "Litecoin Tab - Markets on every new tab!",
-    "short_name": "Litecoin Tab",
+    "name": "Ethereum Tab - Markets on every new tab!",
+    "short_name": "Ethereum Tab",
     "version": "1.0.0",
-    "description": "Realtime Litecoin dashboard delivering streaming price, news, social posts, and code checkins on every new tab.",
+    "description": "Realtime Ethereum dashboard delivering streaming price, news, social posts, and code checkins on every new tab.",
     "default_locale": "en",
     "icons": {
         "16": "img/img_16.png",
@@ -18,7 +18,7 @@
         "newtab": "popup.html"
     },
     "browser_action": {
-        "default_title": "Litecoin Tab"
+        "default_title": "Ethereum Tab"
     },
     "permissions": [
       "activeTab",
