Update metadta information

--- a/chrome/manifest.json
+++ b/chrome/manifest.json
@@ -1,9 +1,9 @@
 {
     "manifest_version": 2,
-    "name": "Ethereum Tab - Markets on every new tab!",
+    "name": "Ethereum Tab - Streaming price & market info.",
     "short_name": "Ethereum Tab",
     "version": "1.0.0",
-    "description": "Realtime Ethereum dashboard delivering streaming price, news, social posts, and code checkins on every new tab.",
+    "description": "Replace the New Tab with streaming price, news, community updates, and more.",
     "default_locale": "en",
     "icons": {
         "16": "img/img_16.png",
